fix broken style on hover of image upload placeholder

--- a/src/stylesheets/prosemirror_shiki.sass
+++ b/src/stylesheets/prosemirror_shiki.sass
@@ -105,7 +105,7 @@
     &.is-opened > span:after
       margin-left: 5px
 
-  .b-image,
+  .b-image:not(.b-ajax),
   .b-video:not(.b-ajax)
     &:hover,
     &.is-prosemirror-selected,
